--- a/src/styles/components/_graph.scss
+++ b/src/styles/components/_graph.scss
@@ -1,15 +1,50 @@
 .heading {
-    @include flex(row,space-between,center);
+    @include flex(row,space-between,baseline);
+    position: relative;
+
+   
 
     p {
       font-size: 12px;
       color: #a6a6a6;
       @extend %pointer;
     }
+
+    ul {
+      position: absolute;      
+      background: #73a8ff;
+      display: none;
+      z-index: 6;
+      right: 0;
+      top: 30px;
+      width: 150px;
+      @extend %boxcurved;
+
+      li {
+        padding: 5px 10px;
+        font-size: 13px;
+        color: white;
+
+        &:hover {
+          background: #f7faff;
+          color: black;
+          
+        }
+      }
+    }
+
+    button {
+      background: transparent;
+
+      &:focus + ul {
+        display: block;
+      }
+    }
+     
+    
     img {
       width: 10px;
-      vertical-align: middle;
-      
+      vertical-align: middle;           
     }
   }
 
@@ -18,5 +53,6 @@
     height: 200px;
     background: white;
     @extend %margin30;
-    @extend %boxcurved;  
+    @extend %boxcurved; 
+    @extend %relative; 
 }
